http-crd, Free5gc Chart: Updates and Fixes
- Updated the http CRD controller with URL parameter to access the
free5gc webui for subscriber configuration.
- Updated the free5gc helm charts to configure the NFs during slice deployment.
- This is required for running the slice NFs from different namespaces.

Signed-off-by: palaniap <palaniappan.ramanathan@intel.com>
Change-Id: If10f5a6a37e485fdd17539644d6a7468124c260c

--- a/Charts/f5gc-smf/templates/configmap.yaml
+++ b/Charts/f5gc-smf/templates/configmap.yaml
@@ -96,7 +96,7 @@ data:
     #           - permit out ip from 60.60.0.1 8080 to any
 
   free5GC.conf: |
-    db_uri: {{ .Values.configuration.mongodb.url }}/free5GC
+    db_uri: {{ .Values.mongodb.url }}/free5GC
     #all logging levels
     #panic
     #fatal
