--- a/Charts/f5gc-subscriber/templates/f5gc-subscriber.yaml
+++ b/Charts/f5gc-subscriber/templates/f5gc-subscriber.yaml
@@ -6,6 +6,7 @@ metadata:
   name: mobilesubscriber-sample-{{ $i }}
 spec:
   # Add fields here
+  url: {{ $.Values.url | quote }}
   name: sub1-{{ $i }}
   plmnid: {{ $.Values.plmnid | quote }}
   supi: {{ $imsi | quote }}
