--- a/Charts/f5gc-webui/templates/configmap.yaml
+++ b/Charts/f5gc-webui/templates/configmap.yaml
@@ -11,4 +11,4 @@ data:
     configuration:
       mongodb:
         name: free5gc
-        url: mongodb://f5gc-mongodb:27017
+        url: {{ .Values.mongodb.url }}
