--- a/Charts/http-crd-controller/templates/crd.yaml
+++ b/Charts/http-crd-controller/templates/crd.yaml
@@ -116,6 +116,10 @@ spec:
               supi:
                 default: "208930000000003"
                 type: string
+              url:
+                description: 'Important: Run "make" to regenerate code after modifying
+                  this file'
+                type: string
             type: object
           status:
             description: MobilesubscriberStatus defines the observed state of Mobilesubscriber
