f5gc install: Updated the EMCO scripts.
- Moved the NFs common to all the slices to separate namespace.
- Each slice is deployed in its own namespace.
- Improved uninstall scripts.
- Clean up.

Signed-off-by: palaniap <palaniappan.ramanathan@intel.com>
Change-Id: I61e4f6a42855e9f40c861ddd7789c9bfb269b353

--- a/emco/free5gc/cert-manager-deploy.yaml
+++ b/emco/free5gc/cert-manager-deploy.yaml
@@ -2,18 +2,18 @@
 # Copyright (c) 2020 Intel Corporation
 #creating vfw composite app entry
 
----
+#---
 #Add label cluster
-version: emco/v2
-resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/labels
-clusterLabel: certLabel
+#version: emco/v2
+#resourceContext:
+#  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/labels
+#clusterLabel: certLabel
 
----
-version: emco/v2
-resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster2}}/labels
-clusterLabel: certLabel
+#---
+#version: emco/v2
+#resourceContext:
+#  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster2}}/labels
+#clusterLabel: certLabel
 
 ---
 version: emco/v2
