f5gc slices: EMCO Deploument scripts
- Rearranged and cleaned up the EMCO scritps for slice deployment.
- Separted the emco artifacts to separate folders.
- Separated the slice common applications.
- Added EMCO deployment scripts for provider apps.
	* emco-monitor
	* external-DNS, Metallb
	* f5gc-mongodb, f5gc-amf, f5gc-nrf, f5gc-nssf, f5gc-webui
	* sdewan crd
	* f5gc subscriber controller.
- Scripts to deploy multiple slices.
- Added and updated the Readme files.

Signed-off-by: palaniap <palaniappan.ramanathan@intel.com>
Change-Id: Icfcef2ef27b433f4ad1d8088cea92aeb494836af

--- a/emco/demo-mec-app/mecapp_deploy.yaml
+++ b/emco/demo-mec-app/mecapp_deploy.yaml
@@ -13,7 +13,7 @@ spec:
 
 {{- range $index, $app := $mec.Apps }}
 ---
-#adding packetgen app to the composite app
+#adding app to the composite app
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName }}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/apps
@@ -24,7 +24,7 @@ file:
 
 {{- end }}
 ---
-#creating vfw composite profile entry
+#creating composite profile entry
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName}}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/composite-profiles
@@ -33,7 +33,7 @@ metadata :
 
 {{- range $index, $app := $mec.Apps }}
 ---
-#adding packetgen app profiles to the composite profile
+#adding app profiles to the composite profile
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName }}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/composite-profiles/{{ $mec.compProfileName }}/profiles
@@ -88,7 +88,7 @@ spec:
 
 {{- range $index, $app := $mec.Apps }}
 ---
-#add the packetgen app placement intent to the generic placement intent
+#add the app placement intent to the generic placement intent
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName }}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/deployment-intent-groups/{{ $mec.depIntGrpName }}/generic-placement-intents/{{ $mec.compAppName }}-placement-intent/app-intents
@@ -104,7 +104,7 @@ spec:
 {{- end }}
 {{- end }}
 ---
-#create the generic placement intent
+#create the generic action intent
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName }}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/deployment-intent-groups/{{ $mec.depIntGrpName }}/generic-k8s-intents
@@ -113,7 +113,7 @@ metadata:
 
 {{- range $index, $app := $mec.Apps }}
 ---
-#create the generic placement intent
+#create the generic action intent resources
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName }}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/deployment-intent-groups/{{ $mec.depIntGrpName }}/generic-k8s-intents/generick8s_intent/resources
@@ -127,10 +127,10 @@ spec:
     kind: Service
     name: r1-{{ $app.name }}
 file:
-  info.json
+  {{ $.defaultJson }}
 
 ---
-#create the generic action intents
+#create the generic action intents customizations
 version: emco/v2
 resourceContext:
   anchor: projects/{{ $.ProjectName }}/composite-apps/{{ $mec.compAppName }}/{{ $mec.compAppVer }}/deployment-intent-groups/{{ $mec.depIntGrpName }}/generic-k8s-intents/generick8s_intent/resources/resource-{{ $app.name }}-service/customizations
@@ -157,7 +157,7 @@ spec:
     }
   ]
 files:
-  - info.json
+  - {{ $.defaultJson }}
 
 {{- end }}
 ---
@@ -192,7 +192,7 @@ spec:
     clusterName: "dummy"
     mode: allow
 files:
-  - info.json
+  - {{ $.defaultJson }}
 
 ---
 
