--- a/emco/provider/monitor.yaml
+++ b/emco/provider/monitor.yaml
@@ -1,5 +1,18 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright (c) 2020 Intel Corporation
+---
+
+#Add label cluster
+version: emco/v2
+resourceContext:
+  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/labels
+clusterLabel: {{.ClusterMonLabel}}
+
+---
+version: emco/v2
+resourceContext:
+  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster2}}/labels
+clusterLabel: {{.ClusterMonLabel}}
 
 ---
 #creating collection composite app entry
