--- a/emco/demo-mec-app/mecapp_deploy.yaml
+++ b/emco/demo-mec-app/mecapp_deploy.yaml
@@ -188,7 +188,7 @@ spec:
   clusterInfo:
     scope: Label
     clusterProvider: edgeProvider
-    clusterLabel: LabelA
+    clusterLabel: sliceLabelA
     clusterName: "dummy"
     mode: allow
 files:
