--- a/emco/provider/ovn-network.yaml
+++ b/emco/provider/ovn-network.yaml
@@ -1,89 +1,48 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright (c) 2020 Intel Corporation
 
----
-#Add label cluster
-version: emco/v2
-resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/labels
-clusterLabel: LabelA
-
----
-version: emco/v2
-resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster2}}/labels
-clusterLabel: LabelB
-
+{{- range $index, $ovn := .ovn }}
 ---
 #Add kv cluster
 version: emco/v2
 resourceContext:
-  anchor: cluster-providers/{{ .ClusterProvider }}/clusters/{{ .Cluster1 }}/kv-pairs
+  anchor: cluster-providers/{{ $ovn.provider }}/clusters/{{ $ovn.cluster }}/kv-pairs
 metadata:
-  name: cluster1key2
+  name: {{ $ovn.cluster }}-key
 spec:
   kv:
-    - CNI-Networking-Nodus-CNI-For-all-interfaces: "true"
+    - CNI-Networking-Nodus-CNI-For-all-interfaces: "{{ $ovn.nodusPrimary }}"
 
----
-#Add kv cluster
-version: emco/v2
-resourceContext:
-  anchor: cluster-providers/{{ .ClusterProvider }}/clusters/{{ .Cluster2 }}/kv-pairs
-metadata:
-  name: cluster2key2
-spec:
-  kv:
-    - CNI-Networking-Nodus-CNI-For-all-interfaces: "true"
-
+{{- range $nindex, $net := $ovn.network }}
 ---
 version: emco/v2
 resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/provider-networks
+  anchor: cluster-providers/{{ $ovn.provider }}/clusters/{{ $ovn.cluster }}/provider-networks
 metadata:
-  name: gtpunetwork
+  name: {{ $net.name }}
 spec:
   cniType: ovn4nfv
   ipv4Subnets:
-  - subnet: 172.16.34.0/24
-    name: gtpu1
-    gateway: 172.16.34.1/24
-    excludeIps: 172.16.34.2 172.16.34.5..172.16.34.10
-  providerNetType: VLAN
+  - subnet: {{ $net.ipv4.subnet }}
+    name: {{ $net.ipv4.name }}
+    gateway: {{ $net.ipv4.gateway }}
+    excludeIps: {{ $net.ipv4.exclude }}
+  providerNetType: {{ $net.type }}
   vlan:
-    vlanId: "101"
-    providerInterfaceName: ens4
-    logicalInterfaceName: ens4.101
-    vlanNodeSelector: specific
+    vlanId: "{{ $net.vlan.id }}"
+    providerInterfaceName: {{ $net.vlan.interface }}
+    logicalInterfaceName: {{ $net.vlan.interface }}.{{ $net.vlan.id }}
+    vlanNodeSelector: {{ $net.vlan.selector }}
     nodeLabelList:
-    - kubernetes.io/hostname=kube-three
+{{- range $lindex, $label := $net.vlan.nodeLabel }}
+    - {{ $label.key }}={{ $label.value }}
+{{- end }}
+{{- end }}
 
 ---
 version: emco/v2
 resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/provider-networks
-metadata:
-  name: sctpnetwork
-spec:
-  cniType: ovn4nfv
-  ipv4Subnets:
-  - subnet: 172.16.24.0/24
-    name: sctp1
-    gateway: 172.16.24.1/24
-    excludeIps: 172.16.24.2 172.16.24.5..172.16.24.10
-  providerNetType: VLAN
-  vlan:
-    vlanId: "102"
-    providerInterfaceName: ens4
-    logicalInterfaceName: ens4.102
-    vlanNodeSelector: specific
-    nodeLabelList:
-    - kubernetes.io/hostname=kube-three
+  anchor: cluster-providers/{{ $ovn.provider }}/clusters/{{ $ovn.cluster }}/apply 
 
----
-version: emco/v2
-resourceContext:
-  anchor: cluster-providers/{{.ClusterProvider}}/clusters/{{.Cluster1}}/apply 
-
-
+{{- end }}
 
