Fixes for network slicing to work with EMCO v22.03
Updated the port numbers used by EMCO controllers.
Updated the documentation.
Tested the network slicing with EMCO v22.03

Signed-off-by: palaniap <palaniappan.ramanathan@intel.com>
Change-Id: Ie5b5e169da57ad6aaa20d5c054dbbad4d4d4040c

--- a/emco/demo-mec-app/mecapp_deploy.yaml
+++ b/emco/demo-mec-app/mecapp_deploy.yaml
@@ -127,7 +127,7 @@ spec:
     kind: Service
     name: r1-{{ $app.name }}
 file:
-  {{ $.defaultJson }}
+  {{ $.defaultYAML }}
 
 ---
 #create the generic action intents customizations
@@ -139,7 +139,7 @@ metadata :
 spec:
   clusterSpecific: "false"
   clusterInfo:
-    scope: Label
+    scope: label
 {{- range $index, $int := $app.cluster }}
     clusterProvider: {{ $int.provider }}
     clusterLabel: {{ $int.label }}
@@ -186,7 +186,7 @@ metadata :
 spec:
   clusterSpecific: "true"
   clusterInfo:
-    scope: Label
+    scope: label
     clusterProvider: edgeProvider
     clusterLabel: sliceLabelA
     clusterName: "dummy"
