--- a/emco/provider/monitor.yaml
+++ b/emco/provider/monitor.yaml
@@ -73,7 +73,7 @@ spec:
   overrideValues:
   - app: {{.AppMonitor}}
     values:
-      "tag": "kube-latest"
+      "tag": {{.MonitorTag}}
       "registryPrefix": {{.monRegistryPrefix}}
 
 ---
