Fixes, software upgrades and Documentation Updates
- Upgraded the cert-manager, sdewan to work with k8s v1.23
- Added nodeselection for deploying the upf and amf.
- Fixes for the deployment scripts, option to configure pdns server.
- Doc: Added the version number of software components used.
- Doc: detailed steps, uinstall instructions etc.,
- Tested with kubernetes v1.23.0

Signed-off-by: palaniap <palaniappan.ramanathan@intel.com>
Change-Id: Ib3c119667c3a72abc80d51d9c7fa50bf8bcc1893

--- a/Charts/f5gc-upf/templates/deployment.yaml
+++ b/Charts/f5gc-upf/templates/deployment.yaml
@@ -89,6 +89,16 @@ spec:
           - /usr/bin/sudo
           - /bin/sh
           - /tmp/sdewan/entrypoint.sh
+          readinessProbe:
+            failureThreshold: 5
+            httpGet:
+              path: /
+              port: 80
+              scheme: HTTP
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          successThreshold: 1
+          timeoutSeconds: 1
           securityContext:
             privileged: true
             procMount: Default
