--- a/Charts/f5gc-upf/templates/sdewan-cm.yaml
+++ b/Charts/f5gc-upf/templates/sdewan-cm.yaml
@@ -19,12 +19,18 @@ data:
     #!/bin/bash
     # Always exit on errors.
     set -ex
+    sysctl -w net.ipv4.ip_forward=1
     echo "" > /etc/config/network
     cat > /etc/config/mwan3 <<EOF
     config globals 'globals'
         option mmx_mask '0x3F00'
         option local_source 'lan'
     EOF
+
+    providerip=$(echo {{ .Values.sdewan.providerCIDR }} | cut -d/ -f1)
+    sep="."
+    suf="0"
+
     eval "networks=$(grep nfn-network /tmp/podinfo/annotations | awk  -F '=' '{print $2}')"
     for net in $(echo -e $networks | jq -c ".interface[]")
     do
@@ -39,27 +45,12 @@ data:
         option ipaddr '$ipaddr'
         option netmask '$netmask'
     EOF
-      cat >> /etc/config/mwan3 <<EOF
-    config interface '$vif'
-            option enabled '1'
-            option family 'ipv4'
-            option reliability '2'
-            option count '1'
-            option timeout '2'
-            option failure_latency '1000'
-            option recovery_latency '500'
-            option failure_loss '20'
-            option recovery_loss '5'
-            option interval '5'
-            option down '3'
-            option up '8'
-    EOF
     done
 
     if [ -f "/tmp/sdewan/account/password" ]; then
         echo "Changing password ..."
         pass=$(cat /tmp/sdewan/account/password)
-        echo root:$pass | chpasswd
+        echo root:$pass | chpasswd -m
     fi
 
     if [ -d "/tmp/sdewan/serving-certs/" ]; then
@@ -81,6 +72,22 @@ data:
     /etc/init.d/dropbear start
     /etc/init.d/mwan3 restart
     /etc/init.d/firewall restart
+    defaultip=$(grep "\podIP\b" /tmp/podinfo/annotations | cut -d/ -f2 | cut -d'"' -f2)
+    for net in $(echo -e $networks | jq -c ".interface[]")
+    do
+        interface=$(echo $net | jq -r .interface)
+        ipaddr=$(ifconfig $interface | awk '/inet/{print $2}' | cut -f2 -d ":" | awk 'NR==1 {print $1}')
+        echo $ipaddr | ( IFS="." read -r var1 var2 var3 var4; CIDR="$var1$sep$var2$sep$var3$sep$suf"; \
+            if [ "${CIDR}" = "${providerip}" ] ; then iptables -t nat -A POSTROUTING -o $interface -d {{ .Values.sdewan.providerCIDR }} -j SNAT --to-source $ipaddr; fi)
+    done
+
+{{- if .Values.sdewan.publicIpAddress }}
+    iptables -t nat -I PREROUTING 1 -m tcp -p tcp -d {{ .Values.sdewan.publicIpAddress }} --dport 6443 -j DNAT --to-dest 10.96.0.1:443
+{{- end }}
+{{- if .Values.sdewan.defaultCIDR }}
+    ip rule add from {{ .Values.sdewan.defaultCIDR }} lookup 40
+    ip rule add from $defaultip lookup main
+{{- end }}
     echo "Entering sleep... (success)"
     # Sleep forever.
     while true; do sleep 100; done
