--- a/Charts/sdewan_controllers/values.yaml
+++ b/Charts/sdewan_controllers/values.yaml
@@ -12,8 +12,8 @@ spec:
     image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.4.1"
     name: "kube-rbac-proxy"
   sdewan:
-    image: "integratedcloudnative/sdewan-controller:latest"
+    image: "integratedcloudnative/sdewan-controller:0.5.2"
     name: "manager"
 
-nodeSelector: {}
+
 
